# goit-pythonweb-hw-08

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3db0c4134596_init.py  9e537bc6a24c_init.py
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/database/: db.py
src/repository/: contacts.py
src/services/: contacts.py
